[FE] fix ios overlapping

--- a/frontend/src/app/pages/sets/sets.component.scss
+++ b/frontend/src/app/pages/sets/sets.component.scss
@@ -7,14 +7,14 @@ main {
 .increment-button {
   color: var(--black);
   border-radius: 0;
-  width: 1.4em;
-  height: 1.4em;
+  width: 2rem;
+  height: 2rem;
+  border: none;
 
   .mat-icon {
-    left: -0.2em;
-    top: -0.2em;
+    left: -0.25rem;
+    top: -0.2rem;
   }
-  //   font-size:em;
   .mat-mdc-button-persistent-ripple {
     border-radius: 0;
   }
@@ -26,23 +26,25 @@ main {
 }
 
 .increment-input {
-  display: grid;
-  grid-template-columns: 1fr 4fr 1fr;
-  align-items: center;
-  margin: 1em 0 0;
   input {
     text-align: center;
-    width: 92%;
-    margin: 0 auto;
-    height: 1.6em;
-    outline: 1px solid;
+    width: 80%;
+    height: 2rem;
+    outline: none;
+    border: none;
+    border-right: 2px solid var(--black);
+    border-left: 2px solid var(--black);
   }
+}
+.increment-input__buttons {
+  margin-top: 0.5rem;
+  display: flex;
+  border: 2px solid var(--black);
 }
 
 .label {
   font-size: 1em;
   font-weight: bold;
-  grid-column: 1/4;
 }
 
 .add-sets-inputs {
